--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url = jdbc:mysql://localhost:3306/projectdb
 spring.datasource.username=root
-spring.datasource.password=Sasi2308
+spring.datasource.password=yourDatabasePassword
 
 spring.jpa.show-sql = true
 
@@ -12,8 +12,8 @@ server.servlet.context-path=/locationweb
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=katta.sweety.2301
-spring.mail.password=katta@23
+spring.mail.username=YourEmailId
+spring.mail.password=yourEmailPassword
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
 spring.mail.properties.mail.smtp.outh=true
